# curated_context_containers

./: .gitignore  .ssh_askpass.sh  AGENT_ECOSYSTEM_SUMMARY.md  BUILDPLAN.md  CLAUDE_DESKTOP_SETUP.md  DECISIONS.md  DEVELOPMENT.md  FIXED_AND_READY.md  Makefile  frontend_guidelines.md  golden_judgments.json  golden_judgments.sample.json  golden_queries.json  phase1_completion.md
AGENTS.md/: AGENTS.md  builder_agent.md  design_agent.md
agents-sdk/: README.md  pyproject.toml
agents-sdk/llc_agents/: __init__.py  client.py  models.py  session.py
agents-sdk/llc_agents/integrations/: __init__.py  langchain.py  llamaindex.py
agents-sdk/tests/: test_client_graph.py  test_client_system_status.py
docker/: .env.dev.template  .env.home.example  .env.prod.template  Caddyfile  LabCaddyfile  README.md  compose.dev.yaml  compose.home.yaml  compose.local.yaml  compose.observability.yaml  compose.prod.yaml  mcp_token.txt
docs/: AGENT_QUICKSTART.md  DEPLOY_HOME_SERVER.md  backup_restore.md  backup_schedule.cron  deployment_guide.md  observability.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts
guides/: embedding_gemma_guide.md
manifests/: codex-temp-check-graph.yaml  codex-temp-check.yaml  expressionist-art.yaml  graphic_design.yaml
mcp-server/: Dockerfile  README.md  alembic.ini  mcp_bridge.py  pyproject.toml  start_bridge.sh
mcp-server-gateway/: README.md  claude-desktop-config.json  claude_desktop_config_MERGED.json  claude_desktop_config_READY.json  install_for_claude.sh  pyproject.toml
mcp-server-gateway/src/llc_mcp_gateway/: __init__.py  server.py
mcp-server/alembic/: env.py  script.py.mako
mcp-server/alembic/versions/: 20251109_001_initial_schema.py  20251127_001_agent_tracking.py  20251205_001_graph_fields.py  20251205_002_enable_graph_default.py  20260201_001_container_hierarchy.py  20260209_001_guiding_documents.py
mcp-server/app/: main.py
mcp-server/app/adapters/: embedder.py  minio.py  neo4j.py  qdrant.py  rerank.py
mcp-server/app/api/: admin.py  collaboration.py  containers.py  documents.py  jobs.py  routes.py  search.py  system.py
mcp-server/app/core/: config.py  metrics.py  runtime_state.py  security.py
mcp-server/app/db/: base.py  models.py  session.py
mcp-server/app/migrations/: __init__.py  neo4j.py  pg.py  qdrant.py  runner.py  types.py
mcp-server/app/models/: __init__.py  admin.py  agent.py  containers.py  documents.py  graph.py  search.py
mcp-server/app/services/: __init__.py  admin.py  agent_tracking.py  collaboration.py  containers.py  diagnostics.py  documents.py  fusion.py  graph.py  graph_nl2cypher.py  health.py  jobs.py  lifecycle.py  manifests.py  search.py
mcp-server/tests/: conftest.py  test_add_manifest_validation.py  test_api_contracts.py  test_container_hierarchy.py  test_documents_api.py  test_graph_integration.py  test_graph_nl2cypher.py  test_graph_service.py  test_integration_search.py  test_metrics.py  test_migration_runner.py  test_rerank_adapter.py  test_search_error_paths.py  test_search_graph_mode.py  test_search_latency_budget.py  test_search_policy.py  test_system_status.py
migrations/: 001_initial_schema.sql  002_graph_fields.sql  003_agent_tracking.sql  004_enable_graph_default.sql  005_container_hierarchy.sql  README.md
scripts/: README.md  backup_prod.sh  bootstrap_db.sh  check_alembic_autogenerate.py  check_no_latest_images.sh  compose_smoke_test.sh  deploy_home_server.sh  deploy_smoke.sh  e2e_search.js  restore_prod.sh  run_golden_queries.sh
single_source_of_truth/: CONTEXT.md  INDEX.md  PROGRESS.md  (+2 more)
workers/: .dockerignore  Dockerfile  README.md  pyproject.toml
workers/src/workers/: config.py  logging.py  metrics.py
workers/src/workers/adapters/: embedder.py  llm.py  minio.py  neo4j.py  qdrant.py
workers/src/workers/jobs/: __init__.py  worker.py
workers/src/workers/pipelines/: __init__.py  chunker.py
workers/src/workers/util/: cache.py  image.py  pdf.py
workers/tests/: test_cache_ttl.py  test_image_pipeline.py  test_image_utils.py  test_minio_adapter.py  test_pipelines_dedup.py  test_qdrant_adapter.py  test_worker_job_control.py
(+143 files in other folders)
