[project]
name = "llc-agents"
version = "0.1.0"
description = "Python SDK for AI agents to interact with Local Latent Containers"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Local Latent Containers Contributors"}
]
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]
llamaindex = [
    "llama-index>=0.9.0",
]
all = [
    "llc-agents[langchain,llamaindex]"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llc_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"









