[project]
name = "llc-mcp-gateway"
version = "0.1.0"
description = "MCP server gateway for Local Latent Containers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llc_mcp_gateway"]









