[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "local-latent-workers"
version = "0.1.0"
description = "Ingestion workers for Local Latent Containers"
requires-python = ">=3.11"
authors = [{ name = "Silent Architect" }]
dependencies = [
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "structlog>=24.1",
  "tenacity>=8.3",
  "orjson>=3.10",
  "qdrant-client>=1.9",
  "minio>=7.2",
  "prometheus-client>=0.20",
  "pypdf>=4.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/workers"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6"
]

[tool.ruff]
target-version = "py311"
line-length = 100
